# dissertation

./: .gitignore  README.md  evaluate.py  evaluate_groq.py  fetch_data.py  fetch_data_groq.py  generate_dissertation_visuals.py  main.py  main_groq.py  train.py  train_groq.py
checkpoints/: utrans_AAPL_final.pt
data/: AAPL_norm_params.json  AAPL_test.csv  AAPL_train.csv
drl_utrans/: config.yaml  demo_run.ipynb  pyproject.toml
drl_utrans/agent/: drl_utrans.py  ppo_utrans.py  replay.py
drl_utrans/configs/: defaults.yaml
drl_utrans/envs/: single_stock.py
drl_utrans/models/: utrans.py  utrans_ac.py
drl_utrans/tests/: test_train_step.py  tests_forward.py
drl_utrans/utils/: cfg.py  indicators.py  metrics.py
feature_generation/: headline_features.py  indicator_embeddings.py
results/: AAPL_metrics.json  ALL_best_summary.csv  BABA_ablation_manifest.json  BABA_all_equity.csv  BABA_all_metrics.json  BABA_all_seed1111_record.json  BABA_all_seed26_record.json  BABA_all_seed8_record.json  BABA_baseline_equity.csv  BABA_baseline_metrics.json  BABA_baseline_seed1111_record.json  BABA_baseline_seed26_record.json  BABA_baseline_seed8_record.json  BABA_best_summary.csv  BABA_headline_equity.csv  BABA_headline_metrics.json  BABA_headline_seed1111_record.json  BABA_headline_seed26_record.json  BABA_headline_seed8_record.json  BABA_techsent_equity.csv  BABA_techsent_metrics.json  BABA_techsent_seed1111_record.json  BABA_techsent_seed26_record.json  BABA_techsent_seed8_record.json  BRK_baseline_equity.csv  BRK_baseline_metrics.json  BRK_baseline_seed1111_record.json  (+202 more)
(+413 files in other folders)
